--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
       <script src="app.js" defer></script>
     </head>
     <body>
-      <div id="app"></div>
+      <div id="app">
+        <p>Hello, {{ name }}</p>
+        <!-- Only expressions can be placed with the double curly brackets -->
+
+        <p>x + y = ?</p>
+        <p>x = {{ x }};  y = {{ y }}</p>
+        <p>{{ x }} + {{ y }} = {{ x + y }}</p>
+        <!-- This is known as declarative programming in HTML -->
+      </div>
     </body>
   </html>
